Fixed zoom icons not showing

--- a/src/scss/_leaflet_overrides.scss
+++ b/src/scss/_leaflet_overrides.scss
@@ -25,32 +25,32 @@
 }
 
 .leaflet-control-zoom {
-  box-shadow: none;
+  box-shadow: none !important;
   border: none !important;
 
   .leaflet-control-zoom-out,
   .leaflet-control-zoom-in {
-    background-size: contain;
+    background-size: contain !important;
     color: transparent !important;
     background-color: transparent !important;
-    border: none;
+    border: none !important;
     width: 44px !important;
   }
 
   .leaflet-control-zoom-out {
-    background-image: url(../img/World_map_-_zoom_out.webp);
+    background-image: url(../img/World_map_-_zoom_out.webp) !important;
 
     &:hover {
-      opacity: 0.8;
+      opacity: 0.8 !important;
     }
   }
 
   .leaflet-control-zoom-in {
-    background-image: url(../img/World_map_-_zoom_in.webp);
+    background-image: url(../img/World_map_-_zoom_in.webp) !important;
 
     &:hover {
-      opacity: 0.8;
-      border: none;
+      opacity: 0.8 !important;
+      border: none !important;
       background-color: transparent !important;
     }
   }
